Adding riscv-emu wasm file